--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>1. Intro Page</head>
+<head>1. Intro Page
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <h1 style="text-align:center;"><u>Personal Details</u></h1>       
 <div class="main" style="padding: 20px;">
@@ -22,8 +24,8 @@
 </p>
 <p> <u>GetLow.mp3 music</u></p>
 <audio controls  src="./Media/Get Low.mp3" >Your browser does not support the HTML5 audio element. </audio> 
-<p> <u>Playing pirate.mp4</u></p>
-<video controls="controls" src="./Media/pirate.mp4" style="margin: 10px auto; width:100%;">Your browser does not support the HTML5 Video element.</video>
+<p> <u>Playing flip.mp4</u></p>
+<video controls="controls" src="Media/flip.mp4" style="margin: 10px auto; width:100%;">Your browser does not support the HTML5 Video element.</video>
 </div>
 <div class="photo" style="width: 24%;float: right;padding:20px;border: 2px solid rgb(0, 0, 0);">
 <img src="./Media/RahulNpic.jpg" width=350px>
